fix wrapping for IE11

--- a/scss/utils/helpers/_type.scss
+++ b/scss/utils/helpers/_type.scss
@@ -194,7 +194,7 @@
 /// Nice hyphenation for running text
 %wrapNice {
 	overflow-wrap: break-word;
-	-ms-word-break: break-all; // IE wraps funny with `break-word`
+	-ms-word-break: normal; // IE wraps funny with `break-word` and `break-all`
 	word-break: break-word;
 	word-wrap: break-word;
 }
